fix routes and form so player partial renders at least, need a lot more fields and a way to control flow

--- a/app/views/storylines/_player_form.html.erb
+++ b/app/views/storylines/_player_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@player) do |f| %>
-<%= f.label %>
-<%= f.text_field :name %>
+  <%= f.text_field :name, placeholder: "enter player's name", required: true %>
+  <%= f.text_field :phone, placeholder: "enter player's text number", required: true %>
 <%= f.submit %>
 <% end %>
