--- a/app/views/storylines/index.html.erb
+++ b/app/views/storylines/index.html.erb
@@ -4,6 +4,7 @@
 <div id="new_phrases">
 	<!--append here-->
 </div>
+<%= render partial: 'player_form' %>
 <% if @turn == nil %>
 	<h1>New Phrase</h1>
 	<%= render partial: 'phrase_form' %>
