still working out how to create storyline with associated picture, story and user

--- a/app/views/phrases/create.html.erb
+++ b/app/views/phrases/create.html.erb
@@ -1,5 +1,4 @@
- <% @storyline.turn = 2 %>
- <%= @storyline.turn %>
- <%= render @picture_form %>
+ 
+ <!-- <%#= render partial: 'picture_form' %> -->
 
  in create.html.erb
