--- a/app/views/storylines/index.html.erb
+++ b/app/views/storylines/index.html.erb
@@ -1,26 +1,17 @@
-<div id="new_drawings">
-	<!--append here-->
-</div>
-
-<div id="new_phrases">
-	<!--append here-->
-</div>
+here's turn <%= @turn %>
 <%= render partial: 'player_form' %>
-<#% if @turn == nil || @turn == 1 %>
-	
-	<%= render partial: 'phrase_form' %>
 
-<#% elsif @turn.even? && @turn != 0 %>
-<!-- 	<div id="new_phrases">
-		
-	</div> -->
-	<h1>New Drawing</h1>
-	<%= render partial: 'picture_form' %>
+<% if @turn == nil || @turn.odd? %>
+<div id="new_drawings">
+  <!--append here-->
+</div>
+<%= render partial: 'phrase_form' %>
 
-<#% elsif @turn.odd? || @turn == 0 %>
+<% elsif @turn.even? && @turn != 0 %>
+<div id="new_phrases">
+  <!--append here-->
+</div>
+<%= render partial: 'picture_form' %>
+  
 
-	<h1>New Phrase of Phrase!</h1>
-	<%= render partial: 'phrase_form' %>
-	
-
-<#% end %>
+<% end %>
