--- a/app/views/storylines/_phrase_form.html.erb
+++ b/app/views/storylines/_phrase_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for(@phrase) do |f| %>
   <%= f.text_field :text, placeholder: "enter a sentence", required: true %>
   <%= hidden_field_tag :storyline_id, @storyline.id %>
-  <%= hidden_field_tag :turn_number, @storyline.turn %>
+  <%= hidden_field_tag :turn_number, @turn %>
+  <%= hidden_field_tag :user_id, current_user.id %>
   <%= f.submit %>
 <% end %>
