make modifications to Storyline so it can be deemed active

--- a/app/views/storylines/_first_form.html.erb
+++ b/app/views/storylines/_first_form.html.erb
@@ -1,1 +1,8 @@
-_first_form.html.erb
+<%= form_for(@storyline) do |f| %>
+  <%= fields_for(@player) do |p| %>  
+    <%= p.text_field :name, placeholder: "enter player's name", required: true %>
+    <%= p.text_field :phone_number, placeholder: "enter player's text number", required: true %>
+  <% end %>
+<%= f.submit %>
+<% end %>
+
