--- a/app/views/storylines/_picture_form.html.erb
+++ b/app/views/storylines/_picture_form.html.erb
@@ -3,7 +3,10 @@
 </canvas>
 <%= form_for(@picture) do |f| %>
   <%= f.hidden_field :image %>
-  <%= hidden_field_tag :picture_id, @picture.id %>
+  <%#= hidden_field_tag :picture_id, @picture.id %>
+  <%= hidden_field_tag :storyline_id, @storyline.id %>
+  <%= hidden_field_tag :turn_number, @turn %>
+  <%= hidden_field_tag :user_id, current_user.id %>
   <%= f.submit %>
   <button type="button" id="clear">Clear</button>
 <% end %>
