--- a/app/views/storylines/_first_form.html.erb
+++ b/app/views/storylines/_first_form.html.erb
@@ -5,6 +5,6 @@
     <%= p.text_field :name, placeholder: "enter player's name" %>
     <%= p.text_field :phone_number, placeholder: "enter player's text number"  %><br>
   <% end %>
-<%= f.submit %>
+   <button type="submit" id="submit_button" class="small radius button">send it</button>
 <% end %>
 
