--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -61,9 +61,9 @@ $em-base: 16px !default;
 
 // Various global styles
 
-$default-float: left;
+$default-float: center;
 
-// $body-bg: #fff;
+$body-bg: #fff;
 // $body-font-color: #222;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
@@ -125,7 +125,7 @@ $default-float: left;
 
 // Media Queries
 
-// $small-screen: 768px;
+$small-screen: 768px;
 // $medium-screen: 1280px;
 // $large-screen: 1440px;
 
@@ -150,7 +150,7 @@ $default-float: left;
 //
 
 // $row-width: em-calc(1000);
-$column-gutter: em-calc(60);
+// $column-gutter: em-calc(60);
 // $total-columns: 12;
 
 //
