--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,8 @@
       <li><%= link_to "Sign in with Facebook", "/auth/facebook" %></li>
       <% end %>
       <li class="divider"></li>
+      <li><%= link_to "Create New Game" %></li>
+      <li class="divider"></li>
       <li><%= link_to "Storylines List" %></li>
     </ul>
   </div>
