--- a/app/views/storylines/index.html.erb
+++ b/app/views/storylines/index.html.erb
@@ -1,4 +1,8 @@
 <% if current_user  %>
+<div id="new_phrases">
+</div>
+<div id="new_pictures">
+</div>
 	<% if @turn == nil || @turn.odd? %>
 	<div id="new_drawings">
 		<% if Picture.last %>
