--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -65,7 +65,7 @@ $default-float: center;
 
 $body-bg: #fff;
 // $body-font-color: #222;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
@@ -150,7 +150,7 @@ $small-screen: 768px;
 //
 
 // $row-width: em-calc(1000);
-// $column-gutter: em-calc(60);
+ $column-gutter: em-calc(60);
 // $total-columns: 12;
 
 //
@@ -164,7 +164,7 @@ $small-screen: 768px;
 
 // Enables media queries for block-grid classes. Set to false if writing semantic HTML.
 
-// $block-grid-media-queries: true;
+$block-grid-media-queries: true;
 
 //
 // Typography Variables
@@ -172,7 +172,8 @@ $small-screen: 768px;
 
 // Control header font styles
 
-// $header-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$header-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+//$header-font-family: "Courier";
 // $header-font-weight: bold;
 // $header-font-style: normal;
 // $header-font-color: #222;
@@ -1255,13 +1256,13 @@ $small-screen: 768px;
 
 // Background color for the top bar
 
- $topbar-bg-color: #df440c;
-// $topbar-bg: $topbar-bg-color;
+ $topbar-bg-color: #FF9900;
+ $topbar-bg: $topbar-bg-color;
 
 // Height and margin
 
-// $topbar-height: 45px;
-// $topbar-margin-bottom: 0;
+$topbar-height: 45px;
+//$topbar-margin-bottom: 90;
 
 // Control Input height for top bar
 
@@ -1283,15 +1284,15 @@ $small-screen: 768px;
 
 // Set the link colors and styles for top-level nav
 
-// $topbar-link-color: #fff;
-// $topbar-link-color-hover: #fff;
-// $topbar-link-color-active: #fff;
+$topbar-link-color: #fff;
+$topbar-link-color-hover: #fff;
+$topbar-link-color-active: #fff;
 // $topbar-link-weight: bold;
 // $topbar-link-font-size: em-calc(13);
-// $topbar-link-hover-lightness: -30%; // Darken by 30%
-// $topbar-link-bg-hover: darken($topbar-bg-color, 3%);
-// $topbar-link-bg-active: darken($topbar-bg-color, 3%);
-
+//$topbar-link-hover-lightness: -30%; // Darken by 30%
+//$topbar-link-bg-hover: darken($topbar-bg-color, 3%);
+//$topbar-link-bg-active: darken($topbar-bg-color, 3%);
+$topbar-link-bg-hover: #FF6600;
 // $topbar-dropdown-label-color: #555;
 // $topbar-dropdown-label-text-transform: uppercase;
 // $topbar-dropdown-label-font-weight: bold;
@@ -1303,7 +1304,7 @@ $small-screen: 768px;
 // $topbar-menu-link-transform: uppercase;
 // $topbar-menu-link-font-size: em-calc(13);
 // $topbar-menu-link-weight: bold;
-// $topbar-menu-link-color: #fff;
+$topbar-menu-link-color: #fff;
 // $topbar-menu-icon-color: #fff;
 // $topbar-menu-link-color-toggled: #888;
 // $topbar-menu-icon-color-toggled: #888;
@@ -1311,7 +1312,7 @@ $small-screen: 768px;
 // Transitions and breakpoint styles
 
 // $topbar-transition-speed: 300ms;
-// $topbar-breakpoint: 940 !default; // Change to 9999px for always mobile layout
+//$topbar-breakpoint: 500 !default; // Change to 9999px for always mobile layout
 // $topbar-media-query: "only screen and (min-width: #{$topbar-breakpoint})";
 
 // Divider Styles
