fix drawing bug, but lose centering :("

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,14 +19,9 @@
   cursor: crosshair;
   display: block;
 }
-body
-{
-  padding: 50px;
-  margin: 50px;
-}
 /* Prevent text selection */
-
-.noselect {
+.noselect 
+{
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
