please please please just commit

--- a/app/views/storylines/index.html.erb
+++ b/app/views/storylines/index.html.erb
@@ -2,7 +2,7 @@
 <% if current_user  %>
 		<div id="new_phrases">
 		</div>
-		<div id="new_pictures">
+		<div id="new_drawings">
 		</div>
 		<% if @turn == nil || @turn.odd? %>
 		<div id="drawings">
