--- a/app/views/storylines/index.html.erb
+++ b/app/views/storylines/index.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
 <% if current_user  %>
+		<div id="new_story">
+		</div>
 		<div id="new_phrases">
 		</div>
 		<div id="new_drawings">
