--- a/app/views/storylines/_first_form.html.erb
+++ b/app/views/storylines/_first_form.html.erb
@@ -1,10 +1,5 @@
 <%= form_for(@storyline) do |f| %>
-  <%= fields_for(@player) do |p| %>  
-    <%= p.text_field :name, placeholder: "enter player's name", required: true %>
-    <%= p.text_field :phone_number, placeholder: "enter player's text number", required: true %><br>
-    <%= p.text_field :name, placeholder: "enter player's name" %>
-    <%= p.text_field :phone_number, placeholder: "enter player's text number"  %><br>
-  <% end %>
+   <%= f.text_field :story_name, placeholder: "please enter a name for this story", required: true, autofocus: true %>
    <button type="submit" id="submit_button" class="small radius button">send it</button>
 <% end %>
 
