--- a/app/views/storylines/_phrase_form.html.erb
+++ b/app/views/storylines/_phrase_form.html.erb
@@ -1,8 +1,8 @@
 <div class="input-group">
 <%= form_for(@phrase) do |f| %>
-
-  
+    <div class="input-lg col-lg-4">
     <%= f.text_field :text, placeholder: "enter a sentence for this picture", autofocus: true, required: true %>
+    </div>
     <%= hidden_field_tag :storyline_id, @storyline.id %>
     <%= hidden_field_tag :turn_number, @turn %>
     <%= hidden_field_tag :user_id, current_user.id %>
