still working on navigation

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,8 +15,8 @@
               <% else %>
               <li><%= link_to "Sign in with Facebook", "/auth/facebook" %></li>
               <% end %>
-              <li><%= link_to "Create New Game", new_story_path %></li>
-              <li><%= link_to "Storylines List"  %></li>
+              <li><%= link_to "Create New Game", new_storyline_path %></li>
+              <li><%= link_to "Storylines List", root_path  %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
