--- a/app/views/storylines/_all_storylines.html.erb
+++ b/app/views/storylines/_all_storylines.html.erb
@@ -1,7 +1,6 @@
 <ul>
   <% @storylines.each do |storyline| %>
-    <li><%= link_to "storyline created on #{storyline.created_at}", storyline %>
-     %>
+    <li><%= link_to "storyline #{storyline.story_name} created on #{storyline.created_at}", storyline %>
   <% end %>
 </ul>
 
