--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,3 +22,8 @@ canvas
     -o-user-select: none;
     user-select: none;
   }
+  #new_storyline
+  {
+    border: 1px solid;
+    visibility:hidden;
+  }
