--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <%= stylesheet_link_tag "application", :media => "all" %>
 
     <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag :pages %>
   </head>
   <body>
   <%= render "layouts/header" %>
