--- a/app/views/storylines/index.html.erb
+++ b/app/views/storylines/index.html.erb
@@ -1,10 +1,15 @@
 <div class="container">
 <% if current_user  %>
-		<div id="new_story">
+ 	
+		<div id="all_storylines">
+			<%= render 'all_storylines' %>
 		</div>
+	
 		<div id="new_phrases">
+			<!-- append newly created phrase -->
 		</div>
 		<div id="new_drawings">
+			<!-- append newly created storyline -->
 		</div>
 		<% if @turn == nil || @turn.odd? %>
 		<div id="drawings">
