--- a/app/views/storylines/_first_form.html.erb
+++ b/app/views/storylines/_first_form.html.erb
@@ -1,11 +1,9 @@
 <%= form_for(Storyline.new) do |f| %>
+<%= f.text_field :story_name, placeholder: "please enter a name for this story", required: true, autofocus: true %><br>
   <%= fields_for(Player.new) do |p| %>  
     <%= p.text_field :name, placeholder: "enter player's name", required: true %>
-    <%= p.text_field :phone_number, placeholder: "enter player's text number", required: true %><br>
-    <%= p.text_field :name, placeholder: "enter player's name" %>
-    <%= p.text_field :phone_number, placeholder: "enter player's text number"  %><br>
+    <%= p.text_field :phone_number, placeholder: "enter player's text number", required: true %>
   <% end %>
-   <%= f.text_field :story_name, placeholder: "please enter a name for this story", required: true, autofocus: true %>
    <button type="submit" id="submit_button" class="small radius button">send it</button>
 <% end %>
 
