--- a/app/views/storylines/_first_form.html.erb
+++ b/app/views/storylines/_first_form.html.erb
@@ -1,3 +1,4 @@
+<div class="input-group">
 <%= form_for(Storyline.new) do |f| %>
 <%= f.text_field :story_name, placeholder: "please enter a name for this story", required: true, autofocus: true %><br>
   <%= fields_for(Player.new) do |p| %>  
@@ -6,5 +7,7 @@
   <% end %>
    <button type="submit" id="submit_button" class="small radius button">send it</button>
 <% end %>
+</div>
+<%= link_to 'Back', root_path %>
 
 
