--- a/app/views/storylines/_picture_form.html.erb
+++ b/app/views/storylines/_picture_form.html.erb
@@ -12,8 +12,8 @@
     <%= hidden_field_tag :storyline_id, @storyline.id %>
     <%= hidden_field_tag :turn_number, @turn %>
     <%= hidden_field_tag :user_id, current_user.id %>
-    <button type="button" id="clear" class="btn-default btn-sm">Clear</button>
-    <button type="submit" id="submit_button" class="btn-default btn-sm">send it</button>
+    <button type="button" id="clear" class="btn btn-default">Clear</button>
+    <button type="submit" id="submit_button" class="btn btn-default">send it</button>
   <% end %>
 </div>
 
