--- a/app/views/storylines/_phrase_form.html.erb
+++ b/app/views/storylines/_phrase_form.html.erb
@@ -7,7 +7,7 @@
     <%= hidden_field_tag :turn_number, @turn %>
     <%= hidden_field_tag :user_id, current_user.id %>
     <br> 
-    <button type="submit" id="submit" class="btn-default btn-sm">send it</button>
+    <button type="submit" id="submit" class="btn btn-default">send it</button>
 
 <% end %>
 </div>
