remove nested form gem and files

--- a/app/views/storylines/_first_form.html.erb
+++ b/app/views/storylines/_first_form.html.erb
@@ -1,13 +1,13 @@
 <div class="input-group">
   <div id="storyline_form">
 <% @storyline = Storyline.new %>
-<%= nested_form_for(@storyline) do |f| %>
+<%= form_for(@storyline) do |f| %>
 <%= f.text_field :story_name, placeholder: "please enter a name for this story", required: true, autofocus: true %>
 <br>
 </div>
 <div class="hide" id="players_form" style="visibility:hidden;">  
-    <%= fields_for(Player.new) do |p| %>
-  <!-- <%#= f.fields_for :player do |p| %>  -->
+
+    <%= fields_for Player.new do |p| %>  
     <%= p.text_field :name, placeholder: "enter player's name" %>
     <%= p.text_field :email, placeholder: "enter player's email address" %>
     <%= hidden_field_tag :storyline_id, @storyline.id %>
