--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,24 +1,24 @@
-    <div class="navbar navbar-inverse navbar-fluid-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">TelephonePictionary</a>
-          <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <% if current_user %>
-              <li><%= link_to "Hello #{current_user.name}", "#" %></li>
-              <li><%= link_to "Sign out", signout_path %></li>
-              <% else %>
-              <li><%= link_to "Sign in with Facebook", "/auth/facebook" %></li>
-              <% end %>
-              <li><%= link_to "Create New Game", new_storyline_path %></li>
-              <li><%= link_to "Storylines List", root_path(list: true) %></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
+<div class="navbar navbar-inverse navbar-fluid-top">
+  <div class="navbar-inner">
+    <div class="container-fluid">
+      <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="<%= root_path %>">TelephonePictionary</a>
+      <div class="container-fluid nav-collapse">
+        <ul class="nav">
+          <% if current_user %>
+            <li><%= link_to "Hello #{current_user.name}", "#" %></li>
+            <li><%= link_to "Sign out", signout_path %></li>
+          <% else %>
+            <li><%= link_to "Sign in with Facebook", "/auth/facebook" %></li>
+          <% end %>
+          <li><%= link_to "Create New Game", new_storyline_path %></li>
+          <li><%= link_to "Storylines List", root_path(list: true) %></li>
+        </ul>
+      </div><!--/.nav-collapse -->
     </div>
+  </div>
+</div>
